<resources>
    <string name="app_name">EA_VTC_chat_project</string>
    <string name="database_url">https://ea-vtc-chat-default-rtdb.firebaseio.com/</string>
    <string name="expanded_image">Expanded Image</string>
    <string name="close_button">Close Button</string>
    <string name="menu_icon">menuicon</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="password_weak">Weak</string>
    <string name="password_medium">Medium</string>
    <string name="password_strong">Strong</string>
    <string name="please_fill_all_info">Please fill in all information</string>
    <string name="invalid_email_format">Invalid Email Format</string>
    <string name="password_mismatch">The password is different, please re-enter it.</string>
    <string name="password_too_weak">Password is too weak</string>
    <string name="failed_generate_username">Failed to generate unique username</string>
    <string name="failed_generate_chat_id">Failed to generate unique chat ID</string>
    <string name="failed_register">Failed to register. Please try again.</string>
    <string name="emoji_icon">Emoji Icon</string>
    <string name="type_message">Type a message…</string>
    <string name="attach_file">Attach File</string>
    <string name="send_message">Send Message</string>
    <string name="upload_icon">Upload Icon</string>
    <string name="email">Email</string>
    <string name="username">User Name</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="region">Region</string>
    <string name="save">Save</string>
    <string name="email_address_required">Email Address (Required)</string>
    <string name="confirm_password_required">Confirm Password (Required)</string>
    <string name="user_name_required">User Name (Required)</string>
    <string name="register_now">Register now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_now">Login Now</string>
    <string name="name">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="slogan">Slogan</string>
    <string name="birthdate">Birthdate</string>
    <string name="profile_setting">Profile Setting</string>
    <string name="_10">10</string>
    <string name="todo">TODO</string>
</resources>