<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/r_profile_image"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/usericon_default"
            android:layout_centerInParent="true" />

        <ImageView
            android:id="@+id/r_upload_image_btn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignEnd="@id/r_profile_image"
            android:layout_alignBottom="@id/r_profile_image"
            android:src="@drawable/baseline_upload_24" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:text="@string/upload_icon"
        android:textColor="#424242"
        android:textSize="16sp"/>

    <EditText
        android:id="@+id/r_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_10"
        android:hint="@string/email_address_required"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/r_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_back_white_10"
            android:hint="Password (Required)"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/password_strength"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="20dp"
            android:text="Strength"
            android:visibility="gone"
            android:textColor="#424242"
            android:textSize="16sp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp">

        <EditText
            android:id="@+id/r_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/round_back_white_10"
            android:hint="@string/confirm_password_required"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/confirm_password_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:paddingEnd="20dp"
            android:visibility="gone"
            android:src="@drawable/baseline_check_24"/>
    </RelativeLayout>

    <EditText
        android:id="@+id/r_user_name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_white_10"
        android:hint="@string/user_name_required"
        android:importantForAutofill="no"
        android:inputType="text"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/r_registerBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/round_back_theme_1000"
        android:text="@string/register_now"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />

        <TextView
            android:id="@+id/r_loginNowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/login_now"
            android:textColor="@color/theme_color"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>